# buzzreach

./: .eas.json  .env.example  .gitignore  API_SURFACE.md  ARCHITECTURE.md  BUILD_IMPROVEMENTS.md  BUILD_RULES.md  BUILD_STATE.md  BUZZREACH.md  CONTRIBUTING.md  EXPORTS.md  GITHUB_INTEGRATION.md  QUICKSTART.md  README.md  RUNNER_FACTORY.md  alembic.ini  crontab.example  product.yaml  pyproject.toml  tailwind.config.js
.claude/: settings.json
atoms/admin/: ADMIN-001_team_management.md
atoms/ai/: AI-001_anthropic_client.md  AI-002_relevance_scorer.md  (+1 more)
config/: example_irs.json  example_parking.json
contracts/: __init__.py  schema_columns.json
migrations/: env.py
tests/: billing_helpers.py  conftest.py  dashboard_helpers.py  test_action_tracking.py  test_advanced_filters.py  test_ai_client.py  test_audit_log_model.py  test_audit_service.py  test_billing_api.py  test_billing_portal.tsx  test_billing_webhooks.py  test_blog_parser.py  test_bulk_actions.tsx  test_bulk_actions_api.py  test_bulk_service.py  test_config_loader.py  test_dashboard_api.py  test_dashboard_errors.py  test_db_session.py  test_dedup.py  test_digest.py  test_discovery_service.py  test_draft.py  test_draft_editor.py  test_draft_routes.py  test_electron.tsx  test_electron_native.tsx  test_email_service.py  test_extractor.py  test_health_alerting.py  test_health_monitor.py  test_jwt_service.py  test_keyword_filter.py  test_metric_model.py  test_metrics.py  test_mobile_actions.tsx  test_mobile_utils.tsx  test_niche_bundles.py  test_opportunities_api.py  test_opportunity_model.py  (+34 more)
(+357 files in other folders)
